--- a/src/components/Todos/Todos.css
+++ b/src/components/Todos/Todos.css
@@ -10,10 +10,42 @@
 }
 
 .todo {
-  display: inline-block;
+  position: relative;
+  display: block;
   width: 300px;
   padding: 1em;
   background-color: var(--color-text-primary);
   color: var(--color-almost-black);
-  margin: 1em;
+  margin: 1em auto;
+  border: 1px solid var(--color-text-primary);
+  transition: border 0.7s;
+  overflow: hidden;
+  &:hover {
+    border: 1px solid var(--color-almost-black);
+  }
+}
+
+.deleteBtn {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 40px;
+  right: -40px;
+  color: var(--color-bg-darkred);
+  background-color: rgba(176, 80, 80, 0.3);
+  transition: right 0.7s;
+}
+
+.deleteBtn div {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.todo:hover .deleteBtn {
+  right: 0;
+}
+
+.deleteBtn:hover {
+  cursor: pointer;
 }
